--- a/web-server/package.json
+++ b/web-server/package.json
@@ -1,4 +1,10 @@
 {
+  "name": "web-server",
+  "version": "1.0.0",
+  "main": "index.js",
+  "scripts": {
+    "start": "node src/app.js"
+  },
   "dependencies": {
     "express": "^4.17.2",
     "hbs": "^4.2.0",
