--- a/web-server/package.json
+++ b/web-server/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "node src/app.js"
+    "start": "node src/app.j"
   },
   "dependencies": {
     "express": "^4.17.2",
